# scout-lang

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  crates-io.yml  docker.yml
examples/: links.sct  scope.sct  scrape.sct
scout-interpreter/: Cargo.toml
scout-interpreter/src/: builder.rs  builtin.rs  crawler.rs  env.rs  eval.rs  import.rs  lib.rs  object.rs
scout-json/: Cargo.toml
scout-json/src/: lib.rs
scout-lexer/: Cargo.toml
scout-lexer/src/: lib.rs  token.rs
scout-lib/: http.sct  keys.sct  str.sct  utils.sct
scout-parser/: Cargo.toml
scout-parser/src/: ast.rs  lib.rs
scout-std/: lib.sct
scout-worker/: Cargo.toml  README.md
scout-worker/src/: config.rs  http.rs  main.rs  output.rs
scout-worker/src/http/: mod.rs  sender.rs  server.rs
scout-worker/src/models/: incoming.rs  mod.rs
scout-worker/src/rmq/: consumer.rs  producer.rs
scripts/: installer.py
src/: main.rs  print.rs  repl.rs
