[workspace]
members = ["scout-interpreter", "scout-lexer", "scout-parser"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[package]
name = "scout"
version = "0.4.1"
edition = "2021"
repository = "https://github.com/maxmindlin/scout-lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
scout-interpreter = { path = "./scout-interpreter/" }
scout-lexer = { path = "./scout-lexer/" }
scout-parser = { path = "./scout-parser/" }
rustyline = "8.0.0"
colored = "2"
fantoccini = "0.19.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
envy = "0.4.2"
serde = { version = "1.0.203", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
