[workspace]
members = ["scout-interpreter", "scout-lexer", "scout-parser"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[[bin]]
name = "scout"
path = "src/main.rs"

[package]
name = "scoutlang"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/maxmindlin/scout-lang"
description = "A web crawling programming language"
homepage = "https://scout-lang.netlify.app"
license = "MIT OR Apache-2.0"
keywords = [
  "programming-language",
  "web-crawling",
  "web-scraping",
  "crawling",
  "scraping",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
scout-interpreter = { version = "0.5.1", path = "./scout-interpreter/" }
scout-lexer = { version = "0.5.1", path = "./scout-lexer/" }
scout-parser = { version = "0.5.1", path = "./scout-parser/" }
rustyline = "8.0.0"
colored = "2"
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
envy = "0.4.2"
serde = { version = "1.0.203", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
