[package]
name = "scout-interpreter"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scout-parser = { path = "../scout-parser/" }
fantoccini = "0.19.3"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.1"
scout-lexer = { path = "../scout-lexer/" }

[dev-dependencies]
test-case = "*"
