[package]
name = "scout-interpreter"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/maxmindlin/scout-lang"
description = "A web crawling programming language"
homepage = "https://scout-lang.netlify.app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scout-parser = { version = "0.5.1", path = "../scout-parser/" }
fantoccini = "0.19.3"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.1"
scout-lexer = { version = "0.5.1", path = "../scout-lexer/" }
url = "2.5.2"

[dev-dependencies]
test-case = "*"
