[package]
name = "scout-interpreter"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/maxmindlin/scout-lang"
description = "A web crawling programming language"
homepage = "https://scout-lang.netlify.app"
license = "MIT OR Apache-2.0"
keywords = [
  "programming-language",
  "web-crawling",
  "web-scraping",
  "crawling",
  "scraping",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scout-parser = { version = "0.7.0", path = "../scout-parser/" }
scout-json = { version = "0.7.0", path = "../scout-json" }
fantoccini = "0.19.3"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.1"
scout-lexer = { version = "0.7.0", path = "../scout-lexer/" }
url = "2.5.2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
envy = "0.4.2"
get-port = "4.0.0"

[dev-dependencies]
test-case = "3.3.1"
