[package]
name = "scout-json"
version = "0.7.1"
edition = "2021"
repository = "https://github.com/maxmindlin/scout-lang"
description = "JSON representation of ScoutLang AST"
homepage = "https://scout-lang.netlify.app"
license = "MIT OR Apache-2.0"
keywords = [
  "programming-language",
  "web-crawling",
  "web-scraping",
  "crawling",
  "scraping",
]

[dependencies]
scout-parser = { version = "0.7.1", path = "../scout-parser/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
test-case = "3.3.1"
