[package]
name = "scout-parser"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/maxmindlin/scout-lang"
description = "A web crawling programming language"
homepage = "https://scout-lang.netlify.app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scout-lexer = { version = "0.5.1", path = "../scout-lexer/" }

[dev-dependencies]
test-case = "*"
