[package]
name = "scout-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
scout-interpreter = { version = "0.6.0", path = "../scout-interpreter/" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.16"
lapin = "2.5.0"
futures-lite = "2.3.0"
serde_json = "1.0"
