[package]
name = "scout-worker"
version = "0.7.1"
edition = "2021"
repository = "https://github.com/maxmindlin/scout-lang"
description = "A worker framework for ScoutLang"
homepage = "https://scout-lang.netlify.app"
license = "MIT OR Apache-2.0"
keywords = [
  "programming-language",
  "web-crawling",
  "web-scraping",
  "crawling",
  "scraping",
]

[dependencies]
scout-interpreter = { version = "0.7.1", path = "../scout-interpreter/" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.16"
lapin = { version = "2.5.0", default-features = false, features = ["native-tls"] }
futures-lite = "2.3.0"
serde_json = "1.0"
tracing = "0.1.40"
reqwest = "0.12.5"